--- a/Restaurantes/Restaurantes.csproj
+++ b/Restaurantes/Restaurantes.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Restaurantes.cs" />
+    <Compile Include="XLWorkbook.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
